syntax = "proto3";

package availability;

option java_multiple_files = true;


service AvailabilityService {
  rpc CheckSlotAvailability (CheckSlotRequest) returns (SlotAvailabilityResponse);
}

message CheckSlotRequest {
  int64 availability_id = 1;
}

message SlotAvailabilityResponse {
  bool available = 1;
}
